# MixedPrecisionNanny

./: .gitignore  README.md  check_model.py  cli.py  monitor_simple.py  nanny.py  pyproject.toml
analyzer/: numerical_checker.py
docs/: functional_requirements.md  functional_requirements_v2.md  research_survey.md
examples/: README.md  train_resnet_classification.py  train_yolo_detection.py
mcp_server/: README.md  requirements.txt  server.py
mcp_server/prompts/: static_check.md
mcp_server/skills/numerical_issues/: dim_imbalance.json
mcp_server/skills/unsafe_ops/: pytorch_amp.json
mcp_server/tests/: test_static_check.py
mixed_precision_nanny/: __init__.py  cli.py  nanny.py
mixed_precision_nanny/tracer/: hook_manager.py
skills/common_fixes/: README.md
skills/numerical_issues/: README.md  case_dim_imbalance.py  case_nan_inf.py
skills/reduction_patterns/: README.md
skills/unsafe_ops/: README.md
storage/: sqlite_writer.py
tests/: conftest.py  test_hook_manager.py  test_integration_training.py  test_nanny.py  test_numerical_checker.py  test_sampler.py  test_sqlite_writer.py
tracer/: hook_manager.py  sampler.py
